crates/check_cli/tests/snapshots/main_cases_overrides_max_file_size/overrides_files_max_size_ignored_includes_does_not_match_filename.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 432
expression: redactor(content)
---
## `check.json`

```json
{
  "files": {
    "maxSize": 1024
  },
  "overrides": [
    {
      "includes": ["invalidFile.js"],
      "files": { "maxSize": 1 }
    }
  ]
}
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
