crates/check_cli/tests/snapshots/main_cases_overrides_max_file_size/overrides_files_max_size_option_invalid_value.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 432
expression: redactor(content)
---
## `check.json`

```json
{
  "files": {
    "maxSize": 1024
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "files": { "maxSize": 0 }
    }
  ]
}
```

## `test.js`

```js
statement();

```

# Termination Message

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Check exited because the configuration resulted in errors. Please fix them.
  


```

# Emitted Messages

```block
check.json:10:47 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The number should be an integer between 1 and 18446744073709551615.
  
     8 │                             "test.js"
     9 │                         ],
  > 10 │                         "files": { "maxSize": 0 }
       │                                               ^
    11 │                     }
    12 │                 ]
  

```
