crates/check_cli/tests/snapshots/main_cases_overrides_max_file_size/overrides_files_max_size_option_pass.snap
---
source: crates/check_cli/tests/snap_test.rs
assertion_line: 432
expression: redactor(content)
---
## `check.json`

```json
{
  "files": {
    "maxSize": 1024
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "files": { "maxSize": 1024 }
    }
  ]
}
```

## `test.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
